--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,26 @@
-.App {
-  text-align: center;
+.FormEmployee{
+  width: 400px;
+  margin: 0 auto;
+  text-align: left;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.FormEmployee h1{
+  text-align:center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.FormEmployee .form-data{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 5px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.FormEmployee .form-data label{
+  display: inline-block;
+  width:100px;
+  margin-right:20px;
+  text-align:right;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.FormEmployee .form-data input:not([type="submit"]) {
+  flex-grow:1;
 }
